--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <style>
+    
+  </style>
 </html>
